# pl-knowledge-engine

./: .env.example  .gitignore  GRAPH_IMPROVEMENT_PLAN.md  IMPLEMENTATION_GUIDE.md  Makefile  conftest.py  pyproject.toml
backend/: main.py
config/: podcast_channels.py  settings.py  teams.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatView.tsx  GraphView.tsx  MatchList.tsx
scripts/: load_graph.py  run_agent1.py  run_agent2.py  run_agent3.py  run_agent4.py  run_clean.py  run_embed.py  run_ingest.py  run_pipeline.py  run_store.py  seed_graph.py
src/clean/: audio_segmenter.py  chunker.py  metadata_tagger.py  stats_cleaner.py  stats_summarizer.py  transcript_cleaner.py
src/embed/: batch_embedder.py  embedder.py  gemini_client.py
src/ingest/: audio_download.py  fpl_data.py  images.py  stats_api.py  transcripts.py  video_download.py  youtube_search.py
src/store/: chroma_store.py  neo4j_store.py
src/utils/: checkpoint.py  logger.py  retry.py
tests/test_clean/: test_audio_segmenter.py  test_chunker.py  test_stats_cleaner.py  test_stats_summarizer.py  test_transcript_cleaner.py
tests/test_embed/: test_batch_embedder.py
tests/test_ingest/: test_images.py  test_stats_api.py  test_transcripts.py  test_video_download.py  test_youtube_search.py
tests/test_store/: test_chroma_store.py
